Fixed title of modencode webapp - avoid wrapping the title over the top of the menu in Firefox 3 and Safari.
Former-commit-id: e716cbf85e814f4681ab59456dba972293a6cfb3

--- a/intermine/webapp/main/resources/webapp/css/webapp.css
+++ b/intermine/webapp/main/resources/webapp/css/webapp.css
@@ -67,7 +67,9 @@ li {
 
 #title {
    position:absolute; top:15px;
-   padding:0px;margin:0px;}
+   padding:0px;margin:0px;
+   width: 70%;
+}
 
 
 #leftCol{
